--- a/myth-demo/myth-demo-springcloud/myth-demo-springcloud-account/src/main/resources/application.yml
+++ b/myth-demo/myth-demo-springcloud/myth-demo-springcloud-account/src/main/resources/application.yml
@@ -7,9 +7,9 @@ server:
 spring:
     datasource:
         driver-class-name:  com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.1.88:3306/myth_account?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
-        username: root
-        password: 123456
+        url: jdbc:mysql://120.78.179.101:3306/myth_account?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+        username: test
+        password: 123456Test!
     application:
       name: account-service
    #activemq:
@@ -22,19 +22,19 @@ spring:
         #    port: 5672
         #    username: guest
         #    password: guest
-    #rocketmq:
-          #namesrvAddr: localhost:9876
-          #consumerGroupName: account
-          #instanceName: account
-    kafka:
-            consumer:
-               bootstrap-servers: 192.168.1.91:9092
-               group-id: test
-               auto-offset-reset: earliest
-               enable-auto-commit: true
-               auto-commit-interval: 100
-               key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-               value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+    rocketmq:
+          namesrvAddr: 120.78.179.101:9876
+          consumerGroupName: account
+          instanceName: account
+#    kafka:
+#            consumer:
+#               bootstrap-servers: 192.168.1.91:9092
+#               group-id: test
+#               auto-offset-reset: earliest
+#               enable-auto-commit: true
+#               auto-commit-interval: 100
+#               key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#               value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
 
 mybatis:
   type-aliases-package: com.github.myth.demo.springcloud.account.api.entity
@@ -52,9 +52,9 @@ com:
         repositorySupport : db
         mythDbConfig :
                  driverClassName  : com.mysql.jdbc.Driver
-                 url :  jdbc:mysql://192.168.1.88:3306/myth?useUnicode=true&amp;characterEncoding=utf8
-                 username : root
-                 password : 123456
+                 url :  jdbc:mysql://120.78.179.101:3306/myth?useUnicode=true&amp;characterEncoding=utf8
+                 username : test
+                 password : 123456Test!
 
        # repositorySupport : redis
        #         hostName  : 192.168.1.68
