--- a/myth-demo/myth-demo-springcloud/myth-demo-springcloud-order/src/main/resources/application.yml
+++ b/myth-demo/myth-demo-springcloud/myth-demo-springcloud-order/src/main/resources/application.yml
@@ -7,9 +7,9 @@ server:
 spring:
     datasource:
         driver-class-name:  com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.1.88:3306/myth_order?useUnicode=true&characterEncoding=utf8
-        username: root
-        password: 123456
+        url: jdbc:mysql://120.78.179.101:3306/myth_order?useUnicode=true&characterEncoding=utf8
+        username: test
+        password: 123456Test!
         initialSize: 20
         minIdle: 20
         maxActive: 100
@@ -49,9 +49,9 @@ com:
         repositorySupport : db
         mythDbConfig :
                  driverClassName  : com.mysql.jdbc.Driver
-                 url :  jdbc:mysql://192.168.1.88:3306/myth?useUnicode=true&amp;characterEncoding=utf8
-                 username : root
-                 password : 123456
+                 url :  jdbc:mysql://120.78.179.101:3306/myth?useUnicode=true&amp;characterEncoding=utf8
+                 username : test
+                 password : 123456Test!
 
        # repositorySupport : redis
        #         hostName  : 192.168.1.68
